Layout and Style Changes

--- a/app/src/main/res/layout/activity_draft_edit.xml
+++ b/app/src/main/res/layout/activity_draft_edit.xml
@@ -44,24 +44,25 @@
         android:id="@+id/title_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/standard_margin"
+        android:layout_marginEnd="@dimen/standard_margin"
         app:layout_constraintTop_toBottomOf="@id/title_label_text_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="@dimen/standard_margin"
-        android:layout_marginEnd="@dimen/standard_margin"
         android:maxLength="268"
         android:textSize="@dimen/label_text_size"
         android:inputType="text"
-        android:importantForAutofill="no"/>
+        android:importantForAutofill="no"
+        android:backgroundTint="@color/twitter_blue"/>
 
     <TextView
         android:id="@+id/body_label_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/standard_margin"
         app:layout_constraintTop_toBottomOf="@id/title_edit_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="@dimen/standard_margin"
         android:textSize="@dimen/label_text_size"
         android:text="@string/body_label_text" />
 
@@ -84,7 +85,8 @@
             android:hint="@string/body_hint"
             android:importantForAutofill="no"
             android:inputType="textMultiLine"
-            android:textSize="@dimen/body_text_size" />
+            android:textSize="@dimen/body_text_size"
+            android:backgroundTint="@color/twitter_blue" />
 
     </ScrollView>
 
