--- a/app/src/main/res/layout/draft.xml
+++ b/app/src/main/res/layout/draft.xml
@@ -1,51 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- set card_view:cardUseCompatPadding to be true to show shadow on all four sides !-->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/small_margin"
-    card_view:cardElevation = "@dimen/standard_elevation">
+    app:cardElevation="@dimen/standard_elevation">
 
-    <LinearLayout
-        android:id="@+id/outer_linear_layout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/standard_margin"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/inner_linear_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/draft_title_text_view"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
-            android:orientation="horizontal">
+            android:layout_marginEnd="@dimen/standard_margin"
+            android:gravity="start"
+            android:textSize="@dimen/draft_title_text_size"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/draft_title_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_margin="@dimen/standard_margin"
-                android:textSize="@dimen/draft_title_text_size"
-                android:layout_gravity="start" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
-            <TextView
-                android:id="@+id/draft_last_modified_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/standard_margin"
-                android:textSize="@dimen/draft_last_modified_text_size"
-                android:layout_gravity="end" />
+        <TextView
+            android:id="@+id/draft_last_modified_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textSize="@dimen/draft_last_modified_text_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/guideline"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="draft_last_modified_text_view,draft_title_text_view"/>
 
         <TextView
             android:id="@+id/draft_body_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_marginTop="@dimen/small_margin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/barrier"
             android:textSize="@dimen/draft_body_text_size"
             android:layout_gravity="start" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
