--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="twitter_blue">#1DA1F2</color>
+
     <color name="recycler_view_item_background">#8F8F8F</color>
 </resources>
