--- a/app/src/main/res/layout/draft.xml
+++ b/app/src/main/res/layout/draft.xml
@@ -36,7 +36,7 @@
             android:id="@+id/draft_last_modified_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:gravity="start"
             android:textSize="@dimen/draft_last_modified_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guideline"
@@ -53,7 +53,7 @@
             android:id="@+id/draft_body_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/small_margin"
+            android:layout_marginTop="@dimen/standard_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/barrier"
