--- a/app/src/main/res/layout/activity_draft_view.xml
+++ b/app/src/main/res/layout/activity_draft_view.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_main_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.DraftViewActivity">
+    tools:context=".views.activities.DraftListActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/activity_draft_view_app_bar"
